<resources>
    <string name="app_name">OTP Attendance System</string>
    <string name="app_main_screen">Sign in</string>
    <string name="app_main_screen_title">OTP Attendance System</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">First Name</string>
    <string name="MiddleName">Middle Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="app_main_desc">Cloud based: OTP Attendance System</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="pick_MFA">MFA Options</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="about">This app is created as a Minor Project, Developed By Anand, Rutvij &amp; Vedant</string>
    <string name="more_info">This is a app to showcase the use of Cognito(User Pools, Identity), IAM(Identity and Access Management), Lambdas(Invoke &amp; DynamoDB) on Android Platform. To generate OTP on Lambda(Python), verify and update attendance on a NoSQL: DynamoDb Database</string>
    <string name="title_activity_sign_up_confirm">SignUpConfirm</string>
    <string name="title_activity_mfa">MFAActivity</string>
    <string name="title_activity_choose_mfa">ChooseMFA</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_add_attribute">AddAttributeActivity</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="title_activity_register_user">RegisterUser</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
