<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutApp"
    tools:showIn="@layout/activity_register_user">


    <TextView
        android:id="@+id/textViewRegMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="Enter the following information to sign up"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegUserIdLabel"
        android:layout_below="@+id/textViewRegMessage"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegUserId"
        android:layout_below="@+id/textViewRegUserIdLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"
        android:hint="Username"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:color="@color/alert"
        android:textColor="@color/alert"
        android:id="@+id/textViewRegUserIdMessage"
        android:layout_below="@+id/editTextRegUserId"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegUserPasswordLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewRegUserIdMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegUserPassword"
        android:layout_below="@+id/textViewRegUserPasswordLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"
        android:hint="Password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewUserRegPasswordMessage"
        android:layout_below="@+id/editTextRegUserPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegGivenNameLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewUserRegPasswordMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegGivenName"
        android:layout_below="@+id/textViewRegGivenNameLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"
        android:hint="Given name"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegGivenNameMessage"
        android:layout_below="@+id/editTextRegGivenName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegNameLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRegGivenNameMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegName"
        android:layout_below="@id/textViewRegNameLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegNameMessage"
        android:layout_below="@id/editTextRegName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegMiddleNameLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRegNameMessage" />

    <EditText
        android:id="@+id/editTextRegMiddleName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:layout_below="@id/textViewRegMiddleNameLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"
        android:hint="@string/MiddleName"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegMiddleNameMessage"
        android:layout_below="@id/editTextRegMiddleName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegLastNameLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRegMiddleNameMessage" />

    <EditText
        android:id="@+id/editTextRegLastName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:layout_below="@id/textViewRegLastNameLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"
        android:hint="@string/LastName"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegLastNameMessage"
        android:layout_below="@id/editTextRegLastName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegEmailLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRegLastNameMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegEmail"
        android:layout_below="@id/textViewRegEmailLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"
        android:hint="Email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegEmailMessage"
        android:layout_below="@id/editTextRegEmail"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegGenderLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRegEmailMessage" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/spinnerRegGender"
        android:layout_below="@id/textViewRegGenderLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegGenderMessage"
        android:layout_below="@id/spinnerRegGender"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegBirthdayLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRegGenderMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegBirthday"
        android:layout_below="@id/textViewRegBirthdayLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"
        android:clickable="true"
        android:inputType="date"
        android:hint="Birth Date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegBirthdayMessage"
        android:layout_below="@id/editTextRegBirthday"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_size_small"
        android:text=" "
        android:id="@+id/textViewRegPhoneLabel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewRegBirthdayMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/editTextRegPhone"
        android:layout_below="@id/textViewRegPhoneLabel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_border_selector"
        android:hint="Phone number"
        android:inputType="phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/activity_text_padding"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/textViewRegPhoneMessage"
        android:layout_below="@id/editTextRegPhone"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_intra_group_separation"
        android:layout_below="@id/textViewRegPhoneMessage"
        android:id="@+id/space_about_2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_button_height"
        android:text="Sign up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/activity_button_text_size"
        android:id="@+id/signUp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/space_about_2"
        android:background="@drawable/button_selector" />


</RelativeLayout>
